# REMAX-Milenio-AI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  opencode.json  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: lint.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
data/: remax_milenio.db
docs/: architecture.md
specs/constitution/: mission.md  security.md  tech-stack.md
specs/features/001-telegram-bot/: plan.md  spec.md  tasks.md
specs/features/002-inmovilla-integration/: plan.md  spec.md  tasks.md
src/: main.py
src/agents/: base.py  intent_classifier.py  lead_agent.py  marketing_agent.py  property_agent.py  router.py
src/config/: settings.py
src/database/: session.py
src/database/models/: __init__.py  base.py  conversation.py  lead.py  property.py
src/database/repositories/: lead_repo.py  task_repo.py
src/guardrails/: confirmation.py
src/memory/: conversation_log.py
src/services/: github_service.py  inmovilla_client.py  notification.py
src/telegram/: router.py
src/telegram/handlers/: commands.py  confirmation.py  help.py  issue.py  message.py  start.py
src/telegram/middlewares/: auth.py
tests/: conftest.py
tests/unit/: test_agents.py  test_router.py
